--- a/app/src/main/res/drawable/custom_cardview.xml
+++ b/app/src/main/res/drawable/custom_cardview.xml
@@ -5,7 +5,7 @@
         <shape android:shape="rectangle">
             <solid android:color="@color/main_background_color" />
             <corners android:radius="10dp" />
-            <stroke android:width="1dp" android:color="@color/main_title_color" />
+            <stroke android:width="1dp" android:color="@color/stroke_color" />
         </shape>
     </item>
 
@@ -13,7 +13,7 @@
         <shape android:shape="rectangle">
             <solid android:color="@color/main_background_color" />
             <corners android:radius="10dp" />
-            <stroke android:width="1dp" android:color="@color/main_title_color" />
+            <stroke android:width="1dp" android:color="@color/stroke_color" />
         </shape>
     </item>
 
