--- a/app/src/main/res/drawable/vertical_line.xml
+++ b/app/src/main/res/drawable/vertical_line.xml
@@ -2,7 +2,7 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:left="-1dp" android:right="-1dp">
         <shape android:shape="rectangle">
-            <solid android:color="@color/main_title_color" />
+            <solid android:color="@color/seperator_color" />
             <size android:width="2dp" />
         </shape>
     </item>
