--- a/app/src/main/res/layout/finished_game_single_item.xml
+++ b/app/src/main/res/layout/finished_game_single_item.xml
@@ -1,203 +1,182 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="16dp"
-    android:background="@drawable/custom_cardview"
-    android:padding="16dp">
-
-    <TextView
-        android:id="@+id/gameInfo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/game_info_okey"
-        android:textStyle="bold"
-        android:textSize="18sp"
-        android:textColor="@color/main_title_color"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="8dp"/>
-
-    <TextView
-        android:id="@+id/gameDate"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/date_info"
-        android:textSize="16sp"
-        android:textColor="@color/main_title_color"
-        android:layout_below="@id/gameInfo"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="16dp"/>
-
-    <TextView
-        android:id="@+id/seperator"
-        android:layout_below="@id/gameDate"
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="@color/main_title_color"/>
+    app:cardElevation="10dp"
+    app:cardCornerRadius="16dp"
+    app:cardBackgroundColor="@color/white"
+    android:layout_margin="8dp">
 
     <LinearLayout
-        android:layout_marginTop="8dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:layout_below="@id/seperator">
+        android:layout_marginBottom="16dp"
+        android:paddingStart="8dp"
+        android:paddingEnd="8dp"
+        android:paddingTop="16dp"
+        android:paddingBottom="16dp">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginBottom="8dp">
-
-            <TextView
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:layout_height="wrap_content"
-                android:text="@string/player_name"
-                android:textColor="@color/main_title_color"
-                android:textStyle="bold" />
-
-            <TextView
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:layout_height="wrap_content"
-                android:text="@string/total_score"
-                android:textColor="@color/main_title_color"
-                android:textStyle="bold" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginBottom="6dp">
-
-            <TextView
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:layout_height="1dp"
-                android:textColor="@color/main_title_color"
-                android:background="@color/main_title_color"
-                android:textStyle="bold" />
-            <TextView
-                android:layout_weight="1"
-                android:layout_width="0dp"
-                android:layout_height="0dp"/>
-
-            <TextView
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:layout_height="1dp"
-                android:textColor="@color/main_title_color"
-                android:background="@color/main_title_color"
-                android:textStyle="bold" />
-            <TextView
-                android:layout_weight="1"
-                android:layout_width="0dp"
-                android:layout_height="0dp"/>
-
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginBottom="8dp">
-
+            android:orientation="horizontal">
             <TextView
                 android:id="@+id/player1Name"
-                android:layout_width="0dp"
-                android:layout_weight="1"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="center"
                 android:text="@string/player"
-                android:textColor="@color/main_title_color"
+                android:textColor="@color/name_text_color"
+                android:textSize="20sp"
+                android:textStyle="bold"/>
+
+            <TextView
+                android:id="@+id/player2Name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:text="@string/player"
+                android:textColor="@color/name_text_color"
+                android:textSize="20sp"
                 android:textStyle="bold" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_marginTop="16dp">
 
             <TextView
                 android:id="@+id/player1TotalScore"
                 android:layout_width="0dp"
-                android:layout_weight="1"
                 android:layout_height="wrap_content"
-                android:text="@string/_120"
-                android:textColor="@color/main_title_color"
-                android:textStyle="bold" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginBottom="8dp">
-
+                android:layout_weight="1"
+                android:text="@string/_0"
+                android:textColor="@color/score_text_color"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                android:gravity="center"/>
             <TextView
-                android:id="@+id/player2Name"
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:layout_height="wrap_content"
-                android:text="@string/player"
-                android:textColor="@color/main_title_color"
-                android:textStyle="bold" />
+                android:layout_width="1dp"
+                android:layout_height="match_parent"
+                android:background="@color/seperator_color"/>
 
             <TextView
                 android:id="@+id/player2TotalScore"
                 android:layout_width="0dp"
-                android:layout_weight="1"
                 android:layout_height="wrap_content"
-                android:text="@string/_120"
-                android:textColor="@color/main_title_color"
-                android:textStyle="bold" />
-
+                android:layout_weight="1"
+                android:text="@string/_0"
+                android:textColor="@color/score_text_color"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                android:gravity="center"/>
         </LinearLayout>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_marginTop="16dp"
+            android:background="@color/seperator_color"/>
+
+        <LinearLayout
+            android:layout_marginTop="8dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            <TextView
+                android:id="@+id/player3Name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:text="@string/player"
+                android:textColor="@color/name_text_color"
+                android:textSize="20sp"
+                android:textStyle="bold"/>
+
+            <TextView
+                android:id="@+id/player4Name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:text="@string/player"
+                android:textColor="@color/name_text_color"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+        </LinearLayout>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:layout_marginBottom="8dp">
-
-            <TextView
-                android:id="@+id/player3Name"
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:layout_height="wrap_content"
-                android:text="@string/player"
-                android:textColor="@color/main_title_color"
-                android:textStyle="bold" />
+            android:layout_marginTop="16dp">
 
             <TextView
                 android:id="@+id/player3TotalScore"
                 android:layout_width="0dp"
-                android:layout_weight="1"
                 android:layout_height="wrap_content"
-                android:text="@string/_120"
-                android:textColor="@color/main_title_color"
-                android:textStyle="bold" />
-
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginBottom="8dp">
-
+                android:layout_weight="1"
+                android:text="@string/_0"
+                android:textColor="@color/score_text_color"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                android:gravity="center"/>
             <TextView
-                android:id="@+id/player4Name"
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:layout_height="wrap_content"
-                android:text="@string/player"
-                android:textColor="@color/main_title_color"
-                android:textStyle="bold" />
+                android:layout_width="1dp"
+                android:layout_height="match_parent"
+                android:background="@color/seperator_color"/>
 
             <TextView
                 android:id="@+id/player4TotalScore"
                 android:layout_width="0dp"
-                android:layout_weight="1"
                 android:layout_height="wrap_content"
-                android:text="@string/_120"
-                android:textColor="@color/main_title_color"
-                android:textStyle="bold" />
+                android:layout_weight="1"
+                android:text="@string/_0"
+                android:textColor="@color/score_text_color"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                android:gravity="center"/>
+        </LinearLayout>
 
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_marginTop="16dp"
+            android:background="@color/seperator_color"/>
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:id="@+id/gameInfo"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/game_info"
+                android:textColor="@color/info_text_color"
+                android:textSize="13sp"
+                android:layout_marginTop="8dp"/>
+
+            <TextView
+                android:id="@+id/gameDate"
+                android:textColor="@color/date_text_color"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/date"
+                android:textSize="12sp"
+                android:textStyle="bold"
+                android:layout_marginTop="8dp"
+                />
         </LinearLayout>
     </LinearLayout>
 
-</RelativeLayout>
+
+</androidx.cardview.widget.CardView>
