--- a/app/src/main/res/layout/fragment_finished_partner_game_detail.xml
+++ b/app/src/main/res/layout/fragment_finished_partner_game_detail.xml
@@ -19,7 +19,7 @@
             android:layout_height="wrap_content">
 
             <ImageView
-                android:id="@+id/goToFinishedGameFragment"
+                android:id="@+id/goToFinishedGameViewFragment"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:contentDescription="@string/tag"
@@ -30,7 +30,7 @@
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
                 android:layout_marginStart="10dp"
-                android:layout_toEndOf="@+id/goToFinishedGameFragment"
+                android:layout_toEndOf="@+id/goToFinishedGameViewFragment"
                 android:text="@string/game_detail"
                 android:textColor="@color/button_text_color"
                 android:textSize="16sp"
@@ -59,7 +59,6 @@
                     android:layout_marginTop="16dp"
                     android:layout_marginBottom="16dp"
                     style="@style/LinearLayoutStyle"
-                    android:padding="10dp"
                     android:orientation="vertical"
                     android:background="@drawable/custom_layout_border">
 
@@ -68,7 +67,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/teamNames"
-                        android:textColor="@color/main_title_color"
+                        android:textColor="@color/title_text_color"
                         android:layout_gravity="center"
                         android:layout_marginBottom="8dp"
                         android:textStyle="bold"
@@ -107,10 +106,13 @@
                             android:textStyle="bold"
                             android:autofillHints="" />
                     </LinearLayout>
-
-
                 </LinearLayout>
 
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:layout_marginTop="16dp"
+                    android:background="@color/seperator_color"/>
 
             <LinearLayout
                 android:background="@drawable/custom_layout_border"
@@ -118,7 +120,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:padding="16dp"
                 android:layout_margin="16dp">
 
                 <LinearLayout
@@ -129,7 +130,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/round_scores"
-                        android:textColor="@color/main_title_color"
+                        android:textColor="@color/title_text_color"
                         android:layout_gravity="center"
                         android:layout_marginBottom="8dp"
                         android:textStyle="bold"
@@ -143,19 +144,24 @@
                 </LinearLayout>
 
         </LinearLayout>
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:layout_marginTop="16dp"
+                    android:background="@color/seperator_color"/>
         <LinearLayout
             android:background="@drawable/custom_layout_border"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:padding="16dp"
             android:layout_margin="16dp">
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/detail"
-                    android:textColor="@color/main_title_color"
+                    android:textColor="@color/title_text_color"
                     android:layout_gravity="center"
                     android:layout_marginBottom="8dp"
                     android:textStyle="bold"
@@ -166,7 +172,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/detail"
-                    android:textColor="@color/main_title_color"
+                    android:textColor="@color/info_text_color"
                     android:layout_marginBottom="8dp"
                     android:textStyle="bold" />
                 <TextView
@@ -175,7 +181,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/date"
-                    android:textColor="@color/main_title_color"
+                    android:textColor="@color/date_text_color"
                     android:layout_marginBottom="8dp"
                     android:textStyle="bold" />
 
