--- a/app/src/main/res/layout/fragment_finished_single_game.xml
+++ b/app/src/main/res/layout/fragment_finished_single_game.xml
@@ -13,7 +13,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="60dp"
-        android:layout_marginBottom="20dp"
         android:contentDescription="@string/tag"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -28,12 +27,11 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
+            android:paddingBottom="16dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
-
-
     </ScrollView>
 
     <TextView
@@ -43,7 +41,7 @@
         android:layout_height="wrap_content"
         android:text="@string/record_not_found"
         android:textSize="20sp"
-        android:textColor="@color/main_title_color"
+        android:textColor="@color/error_text_color"
         app:layout_constraintBottom_toBottomOf="@+id/scrollView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
