--- a/app/src/main/res/layout/fragment_finished_single_game_detail.xml
+++ b/app/src/main/res/layout/fragment_finished_single_game_detail.xml
@@ -19,7 +19,7 @@
             android:layout_height="wrap_content">
 
             <ImageView
-                android:id="@+id/goToFinishedGameFragment"
+                android:id="@+id/goToFinishedGameViewFragment"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:contentDescription="@string/tag"
@@ -30,7 +30,7 @@
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
                 android:layout_marginStart="10dp"
-                android:layout_toEndOf="@+id/goToFinishedGameFragment"
+                android:layout_toEndOf="@+id/goToFinishedGameViewFragment"
                 android:text="@string/game_detail"
                 android:textColor="@color/button_text_color"
                 android:textSize="16sp"
@@ -59,7 +59,6 @@
                 android:layout_marginTop="16dp"
                 android:layout_marginBottom="16dp"
                 style="@style/LinearLayoutStyle"
-                android:padding="10dp"
                 android:orientation="vertical"
                 android:background="@drawable/custom_layout_border">
 
@@ -68,7 +67,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/teamNames"
-                    android:textColor="@color/main_title_color"
+                    android:textColor="@color/title_text_color"
                     android:layout_gravity="center"
                     android:layout_marginBottom="8dp"
                     android:textStyle="bold"
@@ -82,7 +81,7 @@
                         style="@style/EditTextStyle"
                         android:inputType="text"
                         android:maxLength="20"
-                        android:textSize="20sp"
+                        android:textSize="18sp"
                         android:textStyle="bold"
                         android:autofillHints="" />
 
@@ -103,7 +102,7 @@
                         style="@style/EditTextStyle"
                         android:inputType="text"
                         android:maxLength="20"
-                        android:textSize="20sp"
+                        android:textSize="18sp"
                         android:textStyle="bold"
                         android:autofillHints="" />
                     <LinearLayout
@@ -123,7 +122,7 @@
                         style="@style/EditTextStyle"
                         android:inputType="text"
                         android:maxLength="20"
-                        android:textSize="20sp"
+                        android:textSize="18sp"
                         android:textStyle="bold"
                         android:autofillHints="" />
                     <LinearLayout
@@ -143,14 +142,17 @@
                         style="@style/EditTextStyle"
                         android:inputType="text"
                         android:maxLength="20"
-                        android:textSize="20sp"
+                        android:textSize="18sp"
                         android:textStyle="bold"
                         android:autofillHints="" />
                 </LinearLayout>
-
-
             </LinearLayout>
 
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginTop="16dp"
+                android:background="@color/seperator_color"/>
 
             <LinearLayout
                 android:background="@drawable/custom_layout_border"
@@ -158,7 +160,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:padding="16dp"
                 android:layout_margin="16dp">
 
                 <LinearLayout
@@ -169,7 +170,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/round_scores"
-                        android:textColor="@color/main_title_color"
+                        android:textColor="@color/title_text_color"
                         android:layout_marginBottom="8dp"
                         android:layout_gravity="center"
                         android:textStyle="bold"
@@ -183,19 +184,25 @@
                 </LinearLayout>
 
             </LinearLayout>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginTop="16dp"
+                android:background="@color/seperator_color"/>
+
             <LinearLayout
                 android:background="@drawable/custom_layout_border"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:padding="16dp"
                 android:layout_margin="16dp">
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/detail"
-                    android:textColor="@color/main_title_color"
+                    android:textColor="@color/title_text_color"
                     android:layout_gravity="center"
                     android:layout_marginBottom="8dp"
                     android:textStyle="bold"
@@ -206,7 +213,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/detail"
-                    android:textColor="@color/main_title_color"
+                    android:textColor="@color/info_text_color"
                     android:layout_marginBottom="8dp"
                     android:textStyle="bold" />
                 <TextView
@@ -215,7 +222,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/date"
-                    android:textColor="@color/main_title_color"
+                    android:textColor="@color/date_text_color"
                     android:layout_marginBottom="8dp"
                     android:textStyle="bold" />
 
