--- a/app/src/main/res/layout/partner_game_round_item.xml
+++ b/app/src/main/res/layout/partner_game_round_item.xml
@@ -28,7 +28,7 @@
             <TextView
                 android:layout_width="1dp"
                 android:layout_height="match_parent"
-                android:background="@color/main_title_color" />
+                android:background="@color/seperator_color" />
         </LinearLayout>
 
         <com.google.android.material.textfield.TextInputLayout
