--- a/app/src/main/res/layout/fragment_finished_single_game_detail.xml
+++ b/app/src/main/res/layout/fragment_finished_single_game_detail.xml
@@ -54,105 +54,72 @@
             android:orientation="vertical">
 
             <LinearLayout
-                android:layout_marginStart="16dp"
-                android:layout_marginEnd="16dp"
-                android:layout_marginTop="16dp"
-                android:layout_marginBottom="16dp"
+                android:layout_margin="16dp"
                 style="@style/LinearLayoutStyle"
                 android:orientation="vertical"
                 android:background="@drawable/custom_layout_border">
 
                 <TextView
                     android:id="@+id/teamNames"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
                     android:text="@string/teamNames"
-                    android:textColor="@color/title_text_color"
-                    android:layout_gravity="center"
-                    android:layout_marginBottom="8dp"
-                    android:textStyle="bold"
-                    android:textSize="20sp" />
+                    style="@style/TitleTextViewStyle"/>
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-                    <EditText
-                        android:hint="@string/player1_name"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+                    <com.google.android.material.textfield.TextInputLayout
+                        style="@style/NameTextInputLayoutStyle"
                         android:id="@+id/player1Name"
-                        style="@style/EditTextStyle"
-                        android:inputType="text"
-                        android:maxLength="20"
-                        android:textSize="18sp"
-                        android:textStyle="bold"
-                        android:autofillHints="" />
+                        app:hintTextAppearance="@style/HintTextAppearance"
+                        app:boxStrokeWidth="0dp">
 
-                    <LinearLayout
-                        android:layout_marginTop="10dp"
-                        android:gravity="center"
-                        android:layout_weight="1"
-                        android:layout_width="0dp"
-                        android:layout_height="20dp">
-                        <View
-                            android:layout_width="1dp"
-                            android:layout_height="match_parent"
-                            android:background="@drawable/vertical_line" />
-                    </LinearLayout>
-                    <EditText
-                        android:hint="@string/player2_name"
+                        <com.google.android.material.textfield.TextInputEditText
+                            android:id="@+id/player1TotalScore"
+                            style="@style/ScoreTextInputEditTextStyle" />
+                    </com.google.android.material.textfield.TextInputLayout>
+
+                    <include layout="@layout/vertical_seperator" />
+
+                    <com.google.android.material.textfield.TextInputLayout
+                        style="@style/NameTextInputLayoutStyle"
                         android:id="@+id/player2Name"
-                        style="@style/EditTextStyle"
-                        android:inputType="text"
-                        android:maxLength="20"
-                        android:textSize="18sp"
-                        android:textStyle="bold"
-                        android:autofillHints="" />
-                    <LinearLayout
-                        android:layout_marginTop="10dp"
-                        android:gravity="center"
-                        android:layout_weight="1"
-                        android:layout_width="0dp"
-                        android:layout_height="20dp">
-                        <View
-                            android:layout_width="1dp"
-                            android:layout_height="match_parent"
-                            android:background="@drawable/vertical_line" />
-                    </LinearLayout>
-                    <EditText
-                        android:hint="@string/player3_name"
+                        app:hintTextAppearance="@style/HintTextAppearance"
+                        app:boxStrokeWidth="0dp">
+
+                        <com.google.android.material.textfield.TextInputEditText
+                            android:id="@+id/player2TotalScore"
+                            style="@style/ScoreTextInputEditTextStyle" />
+                    </com.google.android.material.textfield.TextInputLayout>
+
+                    <include layout="@layout/vertical_seperator" />
+
+                    <com.google.android.material.textfield.TextInputLayout
+                        style="@style/NameTextInputLayoutStyle"
                         android:id="@+id/player3Name"
-                        style="@style/EditTextStyle"
-                        android:inputType="text"
-                        android:maxLength="20"
-                        android:textSize="18sp"
-                        android:textStyle="bold"
-                        android:autofillHints="" />
-                    <LinearLayout
-                        android:layout_marginTop="10dp"
-                        android:gravity="center"
-                        android:layout_weight="1"
-                        android:layout_width="0dp"
-                        android:layout_height="20dp">
-                        <View
-                            android:layout_width="1dp"
-                            android:layout_height="match_parent"
-                            android:background="@drawable/vertical_line" />
-                    </LinearLayout>
-                    <EditText
-                        android:hint="@string/player4_name"
+                        app:hintTextAppearance="@style/HintTextAppearance"
+                        app:boxStrokeWidth="0dp">
+
+                        <com.google.android.material.textfield.TextInputEditText
+                            android:id="@+id/player3TotalScore"
+                            style="@style/ScoreTextInputEditTextStyle" />
+                    </com.google.android.material.textfield.TextInputLayout>
+
+                    <include layout="@layout/vertical_seperator" />
+
+                    <com.google.android.material.textfield.TextInputLayout
+                        style="@style/NameTextInputLayoutStyle"
                         android:id="@+id/player4Name"
-                        style="@style/EditTextStyle"
-                        android:inputType="text"
-                        android:maxLength="20"
-                        android:textSize="18sp"
-                        android:textStyle="bold"
-                        android:autofillHints="" />
-                </LinearLayout>
+                        app:hintTextAppearance="@style/HintTextAppearance"
+                        app:boxStrokeWidth="0dp">
+
+                        <com.google.android.material.textfield.TextInputEditText
+                            android:id="@+id/player4TotalScore"
+                            style="@style/ScoreTextInputEditTextStyle" />
+                    </com.google.android.material.textfield.TextInputLayout>
+            </LinearLayout>
             </LinearLayout>
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:layout_marginTop="16dp"
-                android:background="@color/seperator_color"/>
+            <include layout="@layout/horizontal_seperator" />
 
             <LinearLayout
                 android:background="@drawable/custom_layout_border"
@@ -167,16 +134,11 @@
                     style="@style/LinearLayoutStyle">
                     <TextView
                         android:id="@+id/roundLabel"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
                         android:text="@string/round_scores"
-                        android:textColor="@color/title_text_color"
-                        android:layout_marginBottom="8dp"
-                        android:layout_gravity="center"
-                        android:textStyle="bold"
-                        android:textSize="20sp" />
+                        style="@style/TitleTextViewStyle" />
 
                     <androidx.recyclerview.widget.RecyclerView
+                        android:layout_marginTop="8dp"
                         android:id="@+id/roundRecyclerView"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content" />
@@ -185,11 +147,7 @@
 
             </LinearLayout>
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:layout_marginTop="16dp"
-                android:background="@color/seperator_color"/>
+            <include layout="@layout/horizontal_seperator" />
 
             <LinearLayout
                 android:background="@drawable/custom_layout_border"
@@ -199,32 +157,18 @@
                 android:layout_margin="16dp">
 
                 <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
                     android:text="@string/detail"
-                    android:textColor="@color/title_text_color"
-                    android:layout_gravity="center"
-                    android:layout_marginBottom="8dp"
-                    android:textStyle="bold"
-                    android:textSize="20sp" />
+                    style="@style/TitleTextViewStyle"/>
 
                 <TextView
                     android:id="@+id/gameDetail"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
                     android:text="@string/detail"
-                    android:textColor="@color/info_text_color"
-                    android:layout_marginBottom="8dp"
-                    android:textStyle="bold" />
+                    style="@style/InfoTextViewStyle"/>
                 <TextView
 
                     android:id="@+id/gameDate"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
                     android:text="@string/date"
-                    android:textColor="@color/date_text_color"
-                    android:layout_marginBottom="8dp"
-                    android:textStyle="bold" />
+                    style="@style/DateTextViewStyle"/>
 
             </LinearLayout>
         </LinearLayout>
