--- a/app/src/main/res/layout/fragment_save_partner_game.xml
+++ b/app/src/main/res/layout/fragment_save_partner_game.xml
@@ -1,166 +1,138 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/scrollView"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/main_background_color"
-    tools:context=".ui.finishedSingleGame.FinishedSingleGameFragment">
-
-    <TextView
-        android:visibility="gone"
-        android:id="@+id/playerNameTitle"
-        android:text="@string/teamNamesAndScoresTitle"
-        android:textSize="20sp"
-        android:textColor="@color/title_text_color"
-        android:layout_marginTop="20dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toTopOf="parent">
 
     <LinearLayout
-        android:id="@+id/nameEntryLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="8dp"
         android:orientation="vertical"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/playerNameTitle">
-
-        <com.google.android.material.textfield.TextInputLayout
-            style="@style/SingleGameTextInputLayoutStyle"
-            android:hint="@string/enter_team1_name">
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/team1NameEntry"
-                android:maxLength="20"
-                android:inputType="text"
-                style="@style/SingleGameTextInputEditTextStyle" />
-        </com.google.android.material.textfield.TextInputLayout>
-
-
-        <com.google.android.material.textfield.TextInputLayout
-            style="@style/SingleGameTextInputLayoutStyle"
-            android:hint="@string/enter_team2_name">
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/team2NameEntry"
-                android:maxLength="20"
-                android:inputType="text"
-                style="@style/SingleGameTextInputEditTextStyle" />
-        </com.google.android.material.textfield.TextInputLayout>
-    </LinearLayout>
-
-    <LinearLayout
-        android:visibility="gone"
-        android:id="@+id/playerLayout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginTop="20dp"
-        android:layout_margin="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/confirmNames">
+        android:layout_margin="8dp">
+        <TextView
+            android:id="@+id/playerNameTitle"
+            android:text="@string/teamNamesAndScoresTitle"
+            style="@style/TitleTextViewStyle"
+            android:visibility="gone"
+            android:layout_marginTop="20dp"/>
 
         <LinearLayout
-            android:layout_width="0dp"
-            android:layout_weight="5"
+            android:id="@+id/nameEntryLayout"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
             <com.google.android.material.textfield.TextInputLayout
+                    style="@style/SingleGameTextInputLayoutStyle"
+                android:hint="@string/enter_team1_name"
+                app:counterEnabled="true"
+                app:counterMaxLength="20"
+                android:gravity="top"
+                app:errorEnabled="true">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/team1NameEntry"
+                    android:maxLength="21"
+                    android:inputType="text"
+                    style="@style/SingleGameTextInputEditTextStyle" />
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
+                style="@style/SingleGameTextInputLayoutStyle"
+                android:hint="@string/enter_team2_name"
+                app:counterEnabled="true"
+                app:counterMaxLength="20"
+                app:errorEnabled="true">
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/team2NameEntry"
+                    android:maxLength="21"
+                    android:inputType="text"
+                    style="@style/SingleGameTextInputEditTextStyle" />
+            </com.google.android.material.textfield.TextInputLayout>
+        </LinearLayout>
+
+        <LinearLayout
+            android:visibility="gone"
+            android:id="@+id/playerLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_marginTop="20dp"
+            android:layout_margin="8dp">
+
+            <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/team1Name"
-                style="@style/SingleGameTextInputLayoutStyle">
+                style="@style/NameTextInputLayoutStyle">
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/team1TotalScore"
-                    style="@style/SingleGameTextInputEditTextStyle"/>
+                    style="@style/ScoreTextInputEditTextStyle"/>
+            </com.google.android.material.textfield.TextInputLayout>
+
+             <include layout="@layout/vertical_seperator" />
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/team2Name"
+                style="@style/NameTextInputLayoutStyle">
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/team2TotalScore"
+                    style="@style/ScoreTextInputEditTextStyle"/>
             </com.google.android.material.textfield.TextInputLayout>
 
         </LinearLayout>
 
         <TextView
+            android:layout_marginTop="20dp"
+            android:id="@+id/seperator"
+            android:visibility="gone"
             android:background="@color/seperator_color"
-            style="@style/SingleGameVerticalSeperatorTextViewStyle"/>
+            android:layout_width="match_parent"
+            android:layout_height="1dp"/>
+
+        <TextView
+            android:id="@+id/roundScoreTitle"
+            android:text="@string/team_round_scores"
+            style="@style/TitleTextViewStyle"
+            android:visibility="gone"
+            android:layout_marginTop="20dp"/>
 
         <LinearLayout
-            style="@style/SingleGameLayoutStyle">
-
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/team2Name"
-                style="@style/SingleGameTextInputLayoutStyle">
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/team2TotalScore"
-                    style="@style/SingleGameTextInputEditTextStyle"/>
-            </com.google.android.material.textfield.TextInputLayout>
-
+            android:id="@+id/scoreLayout"
+            android:visibility="gone"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="20dp"
+            android:layout_margin="8dp"
+            android:orientation="vertical">
         </LinearLayout>
 
+        <Button
+            android:id="@+id/confirmNames"
+            android:text="@string/save_names"
+            style="@style/SingleGameButtonStyle"
+            android:visibility="visible"
+            android:layout_gravity="end" />
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_gravity="end">
+            <Button
+                android:id="@+id/newRound"
+                android:text="@string/new_round"
+                style="@style/SingleGameButtonStyle"/>
+            <Button
+                android:id="@+id/saveGame"
+                android:text="@string/save"
+                style="@style/SingleGameButtonStyle"/>
+        </LinearLayout>
     </LinearLayout>
+</ScrollView>
 
-    <TextView
-        android:layout_marginTop="20dp"
-        android:id="@+id/seperator"
-        android:visibility="gone"
-        android:background="@color/seperator_color"
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/playerLayout"/>
-
-    <TextView
-        android:id="@+id/roundScoreTitle"
-        android:text="@string/team_round_scores"
-        android:visibility="gone"
-        android:textSize="20sp"
-        android:textColor="@color/title_text_color"
-        android:layout_marginTop="20dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/seperator"/>
-
-    <LinearLayout
-        android:id="@+id/scoreLayout"
-        android:visibility="gone"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:layout_marginBottom="20dp"
-        android:layout_margin="8dp"
-        android:orientation="vertical"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/roundScoreTitle">
-    </LinearLayout>
-
-    <Button
-        android:id="@+id/confirmNames"
-        android:text="@string/save_names"
-        style="@style/SingleGameButtonStyle"
-        android:visibility="visible"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/nameEntryLayout" />
-
-    <Button
-        android:id="@+id/newRound"
-        android:text="@string/new_round"
-        style="@style/SingleGameButtonStyle"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/scoreLayout" />
-
-    <Button
-        android:id="@+id/saveGame"
-        android:text="@string/save"
-        style="@style/SingleGameButtonStyle"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/newRound"
-        app:layout_constraintTop_toBottomOf="@+id/scoreLayout" />
-
-</androidx.constraintlayout.widget.ConstraintLayout>
