--- a/app/src/main/res/layout/fragment_save_single_game.xml
+++ b/app/src/main/res/layout/fragment_save_single_game.xml
@@ -6,214 +6,196 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/main_background_color"
-    tools:context=".ui.finishedSingleGame.FinishedSingleGameFragment">
+    tools:context=".ui.saveSingleGame.SaveSingleGameFragment">
 
-    <TextView
-        android:visibility="gone"
-        android:id="@+id/playerNameTitle"
-        android:text="@string/playerNamesAndScoresTitle"
-        android:textSize="20sp"
-        android:textColor="@color/title_text_color"
-        android:layout_marginTop="20dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
-
-    <LinearLayout
-        android:id="@+id/nameEntryLayout"
+    <ScrollView
+        android:id="@+id/scrollView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="8dp"
-        android:orientation="vertical"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_height="match_parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/playerNameTitle">
-
-        <com.google.android.material.textfield.TextInputLayout
-            style="@style/SingleGameTextInputLayoutStyle"
-            android:hint="@string/enter_player1_name">
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/player1NameEntry"
-                android:maxLength="20"
-                android:inputType="text"
-                style="@style/SingleGameTextInputEditTextStyle" />
-        </com.google.android.material.textfield.TextInputLayout>
-
-
-        <com.google.android.material.textfield.TextInputLayout
-            style="@style/SingleGameTextInputLayoutStyle"
-            android:hint="@string/enter_player2_name">
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/player2NameEntry"
-                android:maxLength="20"
-                android:inputType="text"
-                style="@style/SingleGameTextInputEditTextStyle" />
-        </com.google.android.material.textfield.TextInputLayout>
-
-        <com.google.android.material.textfield.TextInputLayout
-            style="@style/SingleGameTextInputLayoutStyle"
-            android:hint="@string/enter_player3_name">
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/player3NameEntry"
-                android:maxLength="20"
-                android:inputType="text"
-                style="@style/SingleGameTextInputEditTextStyle" />
-        </com.google.android.material.textfield.TextInputLayout>
-
-        <com.google.android.material.textfield.TextInputLayout
-            style="@style/SingleGameTextInputLayoutStyle"
-            android:hint="@string/enter_player4_name">
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/player4NameEntry"
-                android:maxLength="20"
-                android:inputType="text"
-                style="@style/SingleGameTextInputEditTextStyle" />
-        </com.google.android.material.textfield.TextInputLayout>
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:visibility="gone"
-        android:id="@+id/playerLayout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginTop="20dp"
-        android:layout_margin="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/confirmNames">
+        app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
-            android:layout_width="0dp"
-            android:layout_weight="5"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:orientation="vertical">
+        <TextView
+            android:id="@+id/playerNameTitle"
+            android:text="@string/playerNamesAndScoresTitle"
+            style="@style/TitleTextViewStyle"
+            android:visibility="gone"
+            android:layout_marginTop="20dp"/>
+
+        <LinearLayout
+            android:id="@+id/nameEntryLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="8dp"
             android:orientation="vertical">
 
             <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/player1Name"
-                style="@style/SingleGameTextInputLayoutStyle">
+                style="@style/SingleGameTextInputLayoutStyle"
+                android:hint="@string/enter_player1_name"
+                app:counterEnabled="true"
+                app:counterMaxLength="20"
+                app:errorEnabled="true">
+
                 <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/player1TotalScore"
-                    style="@style/SingleGameTextInputEditTextStyle"/>
+                    android:id="@+id/player1NameEntry"
+                    android:maxLength="21"
+                    android:inputType="text"
+                    style="@style/SingleGameTextInputEditTextStyle" />
+            </com.google.android.material.textfield.TextInputLayout>
+
+
+            <com.google.android.material.textfield.TextInputLayout
+                style="@style/SingleGameTextInputLayoutStyle"
+                android:hint="@string/enter_player2_name"
+                app:counterEnabled="true"
+                app:counterMaxLength="20"
+                app:errorEnabled="true">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/player2NameEntry"
+                    android:maxLength="21"
+                    android:inputType="text"
+                    style="@style/SingleGameTextInputEditTextStyle" />
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
+                style="@style/SingleGameTextInputLayoutStyle"
+                android:hint="@string/enter_player3_name"
+                app:counterEnabled="true"
+                app:counterMaxLength="20"
+                app:errorEnabled="true">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/player3NameEntry"
+                    android:maxLength="21"
+                    android:inputType="text"
+                    style="@style/SingleGameTextInputEditTextStyle" />
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
+                style="@style/SingleGameTextInputLayoutStyle"
+                android:hint="@string/enter_player4_name"
+                app:counterEnabled="true"
+                app:counterMaxLength="20"
+                app:errorEnabled="true">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/player4NameEntry"
+                    android:maxLength="21"
+                    android:inputType="text"
+                    style="@style/SingleGameTextInputEditTextStyle" />
             </com.google.android.material.textfield.TextInputLayout>
 
         </LinearLayout>
 
-        <TextView
-            style="@style/SingleGameVerticalSeperatorTextViewStyle"/>
-
         <LinearLayout
-            style="@style/SingleGameLayoutStyle">
+            android:visibility="gone"
+            android:id="@+id/playerLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_marginTop="20dp"
+            android:layout_margin="8dp">
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/player1Name"
+                style="@style/NameTextInputLayoutStyle">
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/player1TotalScore"
+                    style="@style/ScoreTextInputEditTextStyle"/>
+            </com.google.android.material.textfield.TextInputLayout>
+
+        <include layout="@layout/vertical_seperator" />
+
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/player2Name"
-                style="@style/SingleGameTextInputLayoutStyle">
+                style="@style/NameTextInputLayoutStyle">
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/player2TotalScore"
-                    style="@style/SingleGameTextInputEditTextStyle"/>
+                    style="@style/ScoreTextInputEditTextStyle"/>
             </com.google.android.material.textfield.TextInputLayout>
 
-        </LinearLayout>
 
-        <TextView
-            style="@style/SingleGameVerticalSeperatorTextViewStyle"/>
+        <include layout="@layout/vertical_seperator" />
 
-        <LinearLayout
-            style="@style/SingleGameLayoutStyle">
 
-            <com.google.android.material.textfield.TextInputLayout
+        <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/player3Name"
-                style="@style/SingleGameTextInputLayoutStyle">
+                style="@style/NameTextInputLayoutStyle">
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/player3TotalScore"
-                    style="@style/SingleGameTextInputEditTextStyle"/>
+                    style="@style/ScoreTextInputEditTextStyle"/>
             </com.google.android.material.textfield.TextInputLayout>
 
-        </LinearLayout>
-
-        <TextView
-            style="@style/SingleGameVerticalSeperatorTextViewStyle"/>
-
-        <LinearLayout
-            style="@style/SingleGameLayoutStyle">
+        <include layout="@layout/vertical_seperator" />
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/player4Name"
-                style="@style/SingleGameTextInputLayoutStyle">
+                style="@style/NameTextInputLayoutStyle">
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/player4TotalScore"
-                    style="@style/SingleGameTextInputEditTextStyle"/>
+                    style="@style/ScoreTextInputEditTextStyle"/>
             </com.google.android.material.textfield.TextInputLayout>
 
         </LinearLayout>
-    </LinearLayout>
 
-    <TextView
-        android:layout_marginTop="20dp"
-        android:id="@+id/seperator"
-        android:visibility="gone"
-        android:background="@color/seperator_color"
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/playerLayout"/>
+        <TextView
+            android:layout_marginTop="20dp"
+            android:id="@+id/seperator"
+            android:visibility="gone"
+            android:background="@color/seperator_color"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"/>
 
-    <TextView
-        android:id="@+id/roundScoreTitle"
-        android:text="@string/teamScoresTitle"
-        android:visibility="gone"
-        android:textSize="20sp"
-        android:textColor="@color/title_text_color"
-        android:layout_marginTop="20dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/seperator"/>
+        <TextView
+            android:id="@+id/roundScoreTitle"
+            android:text="@string/teamScoresTitle"
+            style="@style/TitleTextViewStyle"
+            android:visibility="gone"
+            android:layout_marginTop="20dp"/>
 
-    <LinearLayout
-        android:id="@+id/scoreLayout"
-        android:visibility="gone"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:layout_marginBottom="20dp"
-        android:layout_margin="8dp"
-        android:orientation="vertical"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/roundScoreTitle">
-    </LinearLayout>
+        <LinearLayout
+            android:id="@+id/scoreLayout"
+            android:visibility="gone"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="20dp"
+            android:layout_margin="8dp"
+            android:orientation="vertical">
+        </LinearLayout>
 
-    <Button
-        android:id="@+id/confirmNames"
-        android:text="@string/save_names"
-        style="@style/SingleGameButtonStyle"
-        android:visibility="visible"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/nameEntryLayout" />
+        <Button
+            android:id="@+id/confirmNames"
+            android:text="@string/save_names"
+            style="@style/SingleGameButtonStyle"
+            android:visibility="visible"
+            android:layout_gravity="end"/>
 
-    <Button
-        android:id="@+id/newRound"
-        android:text="@string/new_round"
-        style="@style/SingleGameButtonStyle"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/scoreLayout" />
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_gravity="end" >
 
-    <Button
-        android:id="@+id/saveGame"
-        android:text="@string/save"
-        style="@style/SingleGameButtonStyle"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/newRound"
-        app:layout_constraintTop_toBottomOf="@+id/scoreLayout" />
+                <Button
+                    android:id="@+id/newRound"
+                    android:text="@string/new_round"
+                    style="@style/SingleGameButtonStyle"/>
 
+                <Button
+                    android:id="@+id/saveGame"
+                    android:text="@string/save"
+                    style="@style/SingleGameButtonStyle" />
+            </LinearLayout>
+
+
+        </LinearLayout>
+    </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
