--- a/app/src/main/res/layout/partner_game_round_item.xml
+++ b/app/src/main/res/layout/partner_game_round_item.xml
@@ -2,43 +2,26 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:layout_marginTop="6dp">
+    android:orientation="horizontal"
+    android:layout_marginTop="16dp">
 
-    <LinearLayout
-        android:layout_marginTop="16dp"
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+    <com.google.android.material.textfield.TextInputLayout
+        style="@style/NameTextInputLayoutStyle"
+        android:id="@+id/team1ScoreHint">
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/team1Score"
+            style="@style/ScoreTextInputEditTextStyle"/>
+    </com.google.android.material.textfield.TextInputLayout>
 
-        <com.google.android.material.textfield.TextInputLayout
-            style="@style/SingleGameEditTextStyle"
-            android:id="@+id/team1ScoreHint">
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/team1Score"
-                style="@style/SingleGameTextInputEditTextStyle"/>
-        </com.google.android.material.textfield.TextInputLayout>
+    <include layout="@layout/vertical_seperator" />
 
-        <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:gravity="center">
+    <com.google.android.material.textfield.TextInputLayout
+        style="@style/NameTextInputLayoutStyle"
+        android:id="@+id/team2ScoreHint">
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/team2Score"
+            style="@style/ScoreTextInputEditTextStyle"/>
+    </com.google.android.material.textfield.TextInputLayout>
 
-            <TextView
-                android:layout_width="1dp"
-                android:layout_height="match_parent"
-                android:background="@color/seperator_color" />
-        </LinearLayout>
-
-        <com.google.android.material.textfield.TextInputLayout
-            style="@style/SingleGameEditTextStyle"
-            android:id="@+id/team2ScoreHint">
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/team2Score"
-                style="@style/SingleGameTextInputEditTextStyle"/>
-        </com.google.android.material.textfield.TextInputLayout>
-
-    </LinearLayout>
 
 </LinearLayout>
