--- a/app/src/main/res/layout/single_game_round_item.xml
+++ b/app/src/main/res/layout/single_game_round_item.xml
@@ -2,82 +2,45 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:layout_marginTop="6dp">
+    android:orientation="horizontal"
+    android:layout_marginTop="16dp">
 
-        <LinearLayout
-            android:layout_marginTop="16dp"
-            android:orientation="horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+        <com.google.android.material.textfield.TextInputLayout
+            style="@style/NameTextInputLayoutStyle"
+            android:id="@+id/player1ScoreHint">
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/player1Score"
+                    style="@style/ScoreTextInputEditTextStyle"/>
+        </com.google.android.material.textfield.TextInputLayout>
 
-                <com.google.android.material.textfield.TextInputLayout
-                    style="@style/SingleGameEditTextStyle"
-                    android:id="@+id/player1ScoreHint">
-                        <com.google.android.material.textfield.TextInputEditText
-                            android:id="@+id/player1Score"
-                            style="@style/SingleGameTextInputEditTextStyle"/>
-                </com.google.android.material.textfield.TextInputLayout>
+        <include layout="@layout/vertical_seperator" />
 
-                <LinearLayout
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:gravity="center">
+        <com.google.android.material.textfield.TextInputLayout
+            style="@style/NameTextInputLayoutStyle"
+            android:id="@+id/player2ScoreHint">
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/player2Score"
+                    style="@style/ScoreTextInputEditTextStyle"/>
+        </com.google.android.material.textfield.TextInputLayout>
 
-                        <TextView
-                            android:layout_width="1dp"
-                            android:layout_height="match_parent"
-                            android:background="@color/seperator_color" />
-                </LinearLayout>
+        <include layout="@layout/vertical_seperator" />
 
-                <com.google.android.material.textfield.TextInputLayout
-                    style="@style/SingleGameEditTextStyle"
-                    android:id="@+id/player2ScoreHint">
-                        <com.google.android.material.textfield.TextInputEditText
-                            android:id="@+id/player2Score"
-                            style="@style/SingleGameTextInputEditTextStyle"/>
-                </com.google.android.material.textfield.TextInputLayout>
+        <com.google.android.material.textfield.TextInputLayout
+            style="@style/NameTextInputLayoutStyle"
+            android:id="@+id/player3ScoreHint">
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/player3Score"
+                    style="@style/ScoreTextInputEditTextStyle"/>
+        </com.google.android.material.textfield.TextInputLayout>
 
-                <LinearLayout
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:gravity="center">
+        <include layout="@layout/vertical_seperator" />
 
-                        <TextView
-                            android:layout_width="1dp"
-                            android:layout_height="match_parent"
-                            android:background="@color/seperator_color" />
-                </LinearLayout>
-
-                <com.google.android.material.textfield.TextInputLayout
-                    style="@style/SingleGameEditTextStyle"
-                    android:id="@+id/player3ScoreHint">
-                        <com.google.android.material.textfield.TextInputEditText
-                            android:id="@+id/player3Score"
-                            style="@style/SingleGameTextInputEditTextStyle"/>
-                </com.google.android.material.textfield.TextInputLayout>
-
-                <LinearLayout
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:gravity="center">
-
-                        <TextView
-                            android:layout_width="1dp"
-                            android:layout_height="match_parent"
-                            android:background="@color/seperator_color" />
-                </LinearLayout>
-
-                <com.google.android.material.textfield.TextInputLayout
-                    style="@style/SingleGameEditTextStyle"
-                    android:id="@+id/player4ScoreHint">
-                        <com.google.android.material.textfield.TextInputEditText
-                            android:id="@+id/player4Score"
-                            style="@style/SingleGameTextInputEditTextStyle"/>
-                </com.google.android.material.textfield.TextInputLayout>
-        </LinearLayout>
+        <com.google.android.material.textfield.TextInputLayout
+            style="@style/NameTextInputLayoutStyle"
+            android:id="@+id/player4ScoreHint">
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/player4Score"
+                    style="@style/ScoreTextInputEditTextStyle"/>
+        </com.google.android.material.textfield.TextInputLayout>
 
 </LinearLayout>
