--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,59 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <style name="EditTextStyle" parent="Widget.AppCompat.EditText" >
-        <item name="android:layout_width">wrap_content</item>
-        <item name="android:layout_height">48dp</item>
-        <item name="android:paddingStart">8dp</item>
-        <item name="android:layout_marginStart">8dp</item>
-        <item name="android:padding">5dp</item>
-        <item name="android:textColor">@color/score_text_color</item>
-        <item name="android:textColorHint">@color/score_hint_text_color</item>
-        <item name="android:background">@drawable/custom_edittext</item>
-        <item name="android:layout_gravity">center</item>
-        <item name="android:inputType">numberSigned</item>
-        <item name="android:hint">Skor</item>
-        <item name="android:layout_weight">2</item>
-        <item name="android:maxLines">1</item>
-        <item name="android:maxWidth">50dp</item>
-        <item name="android:maxLength">6</item>
-        <item name="android:focusable">false</item>
-    </style>
-
-
-    <style name="TextViewStyle" parent="Widget.AppCompat.TextView">
-        <item name="android:textColor">@color/title_text_color</item>
-        <item name="android:layout_width">0dp</item>
-        <item name="android:layout_height">48dp</item>
-        <item name="android:layout_gravity">center</item>
-        <item name="android:layout_weight">2</item>
-        <item name="android:textStyle">bold</item>
-        <item name="android:textSize">16sp</item>
-        <item name="android:gravity">bottom</item>
-        <item name="android:layout_marginBottom">5dp</item>
-
-    </style>
-
     <style name="LinearLayoutStyle">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:orientation">horizontal</item>
-
-    </style>
-
-    <style name="VerticalLinearLayoutSeperatorStyle">
-        <item name="android:layout_width">0dp</item>
-        <item name="android:layout_height">20dp</item>
-        <item name="android:gravity">center</item>
-        <item name="android:layout_marginTop">20dp</item>
-        <item name="android:layout_weight">2.5</item>
-
-    </style>
-
-    <style name="MyCardViewStyle" parent="Widget.MaterialComponents.CardView">
-        <item name="cardBackgroundColor">@color/black</item>
-        <item name="cardElevation">8dp</item>
-        <item name="cardCornerRadius">4dp</item>
-        <item name="cardUseCompatPadding">true</item>
     </style>
 
     <style name="AlertDialogStyle" parent="Theme.AppCompat.Dialog.Alert">
@@ -64,37 +14,11 @@
         <item name="android:editTextColor">@color/white</item>
         <item name="android:textColorHint">@color/white</item>
         <item name="android:textSize">14sp</item>
-
     </style>
 
-    <style name="SingleGameEditTextStyle" parent="Widget.AppCompat.EditText" >
-        <item name="android:layout_width">0dp</item>
-        <item name="android:layout_height">wrap_content</item>
-        <item name="android:textColor">@color/score_text_color</item>
-        <item name="android:textColorHint">@color/score_hint_text_color</item>
-        <item name="android:hint">Oyuncu</item>
-        <item name="android:layout_weight">4</item>
-        <item name="android:textSize">14sp</item>
-        <item name="android:gravity">center</item>
-        <item name="android:maxLength">4</item>
-
-    </style>
-
-    <style name="SingleGameEditTextStyle2" parent="Widget.AppCompat.EditText" >
+    <style name="SingleGameTextInputLayoutStyle" parent="Widget.MaterialComponents.TextInputLayout.FilledBox">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:layout_margin">8dp</item>
-        <item name="android:backgroundTint">@color/white</item>
-        <item name="android:textColor">@color/white</item>
-        <item name="android:textColorHint">@color/white</item>
-        <item name="android:inputType">text</item>
-        <item name="android:importantForAutofill">no</item>
-    </style>
-
-
-    <style name="SingleGameTextInputLayoutStyle" parent="Widget.MaterialComponents.TextInputLayout.FilledBox" >
-        <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">80dp</item>
         <item name="android:background">@color/white</item>
         <item name="android:textColor">@color/score_hint_text_color</item>
         <item name="android:textColorHint">@color/score_hint_text_color</item>
@@ -102,33 +26,17 @@
         <item name="android:padding">4dp</item>
         <item name="android:textStyle">bold</item>
         <item name="boxStrokeWidth">1dp</item>
-        <item name="boxStrokeColor">@color/black</item>
     </style>
 
     <style name="SingleGameTextInputEditTextStyle"  >
         <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
         <item name="android:background">@color/white</item>
         <item name="android:backgroundTint">@color/white</item>
         <item name="android:textColor">@color/score_text_color</item>
         <item name="android:textColorHint">@color/score_text_color</item>
         <item name="android:maxLength">4</item>
         <item name="android:inputType">numberSigned</item>
-
-    </style>
-
-    <style name="SingleGameVerticalSeperatorTextViewStyle" parent="Widget.AppCompat.TextView">
-        <item name="android:layout_width">1dp</item>
-        <item name="android:layout_height">match_parent</item>
-        <item name="android:background">@color/seperator_color</item>
-        <item name="android:layout_margin">8dp</item>
-    </style>
-
-    <style name="SingleGameLayoutStyle">
-        <item name="android:layout_width">0dp</item>
-        <item name="android:layout_height">wrap_content</item>
-        <item name="android:layout_weight">5</item>
-        <item name="android:orientation">vertical</item>
     </style>
 
     <style name="SingleGameButtonStyle" parent="@style/Widget.AppCompat.Button">
@@ -138,6 +46,95 @@
         <item name="android:layout_margin">6dp</item>
         <item name="android:textColor">@color/button_text_color</item>
         <item name="android:background">@drawable/custom_button</item>
+    </style>
+
+
+    <style name="NameTextViewStyle" parent="Widget.AppCompat.TextView">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_weight">2</item>
+        <item name="android:text">@string/player</item>
+        <item name="android:textColor">@color/name_text_color</item>
+        <item name="android:textSize">20sp</item>
+        <item name="android:textStyle">normal</item>
+        <item name="android:gravity">center</item>
+        <item name="android:layout_margin">6dp</item>
+        <item name="android:maxWidth">120dp</item>
 
     </style>
+
+    <style name="ScoreTextViewStyle" parent="Widget.AppCompat.TextView">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_weight">1</item>
+        <item name="android:gravity">center</item>
+        <item name="android:text">@string/_0</item>
+        <item name="android:textColor">@color/score_text_color</item>
+        <item name="android:textSize">18sp</item>
+        <item name="android:textStyle">bold</item>
+
+    </style>
+
+    <style name="NameTextInputLayoutStyle" parent="Widget.AppCompat.EditText" >
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textColor">@color/score_text_color</item>
+        <item name="android:textColorHint">@color/score_hint_text_color</item>
+        <item name="android:hint">Oyuncu</item>
+        <item name="android:layout_weight">1</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:layout_gravity">center</item>
+        <item name="android:maxLength">4</item>
+    </style>
+
+    <style name="ScoreTextInputEditTextStyle" >
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:background">@color/white</item>
+        <item name="android:backgroundTint">@color/white</item>
+        <item name="android:textColor">@color/score_text_color</item>
+        <item name="android:textColorHint">@color/score_text_color</item>
+        <item name="android:maxLength">21</item>
+        <item name="android:inputType">numberSigned</item>
+        <item name="android:gravity">center</item>
+        <item name="android:textSize">18sp</item>
+        <item name="android:paddingTop">40dp</item>
+    </style>
+
+    <style name="DateTextViewStyle" parent="Widget.AppCompat.TextView">
+        <item name="android:textColor">@color/date_text_color</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:text">@string/date</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textSize">12sp</item>
+        <item name="android:layout_marginTop">8dp</item>
+    </style>
+
+    <style name="TitleTextViewStyle" parent="Widget.AppCompat.TextView">
+        <item name="android:textColor">@color/title_text_color</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textSize">20sp</item>
+        <item name="android:layout_gravity">center</item>
+        <item name="android:layout_margin">8dp</item>
+
+    </style>
+
+    <style name="InfoTextViewStyle" parent="Widget.AppCompat.TextView">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:text">@string/game_info</item>
+        <item name="android:textColor">@color/info_text_color</item>
+        <item name="android:textStyle">normal</item>
+        <item name="android:textSize">13sp</item>
+        <item name="android:layout_marginTop">8dp</item>
+    </style>
+
+    <style name="HintTextAppearance" parent="TextAppearance.Design.Hint">
+        <item name="android:textSize">18sp</item>
+        <item name="android:textColor">@color/purple_200</item>
+    </style>
+
 </resources>
