Tekli oyun görüntüleme ekranına arama çubuğu eklendi

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -22,7 +22,8 @@
     <color name="stroke_color">#45494A</color>
     <color name="main_background_color">#FFFFFF</color>
     <color name="button_text_color">#FFFFFF</color>
-
+    <color name="icon_color">#45494A</color>
+    <color name="searchview_text_color">#45494A</color>
     <color name="min_score_color">#8022D11B</color>
     <color name="max_score_color">#80FF0000</color>
 
