--- a/app/src/main/res/layout/fragment_finished_partner_game.xml
+++ b/app/src/main/res/layout/fragment_finished_partner_game.xml
@@ -32,18 +32,6 @@
                 android:textSize="16sp"
                 android:textStyle= "bold"/>
 
-            <androidx.appcompat.widget.SearchView
-                app:closeIcon="@drawable/ic_close"
-                app:searchIcon="@drawable/ic_search"
-                app:searchHintIcon="@drawable/ic_search"
-                android:id="@+id/searchView"
-                app:tint="@android:color/white"
-                app:theme="@style/SearchViewStyle"
-                app:queryHint="Aramak için bir tarih veya takım adı yazınız"
-                android:layout_width="match_parent"
-                android:layoutDirection="rtl"
-                android:layout_height="wrap_content"
-                android:layout_alignParentEnd="true" />
         </RelativeLayout>
     </androidx.appcompat.widget.Toolbar>
 
@@ -58,17 +46,40 @@
         app:layout_constraintTop_toBottomOf="@+id/toolBar"
         app:layout_constraintTop_toTopOf="parent">
 
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/finishedGameRecyclerView"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="16dp"
-            android:paddingBottom="16dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:orientation="vertical">
+
+            <androidx.appcompat.widget.SearchView
+                android:background="@drawable/searchview_border"
+                android:layout_marginStart="24dp"
+                android:layout_marginEnd="24dp"
+                android:layout_marginTop="16dp"
+                app:closeIcon="@drawable/ic_close"
+                app:searchIcon="@drawable/ic_search"
+                app:searchHintIcon="@drawable/ic_search"
+                android:id="@+id/searchView"
+                app:tint="@color/searchview_text_color"
+                app:theme="@style/SearchViewStyle"
+                app:queryHint="Aramak için bir tarih veya takım adı yazınız"
+                android:layout_width="match_parent"
+                android:layoutDirection="rtl"
+                android:layout_height="wrap_content" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/finishedGameRecyclerView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="16dp"
+                android:paddingBottom="16dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+        </LinearLayout>
+
+
     </ScrollView>
 
     <TextView
