--- a/app/src/main/res/layout/finished_game_partner_item.xml
+++ b/app/src/main/res/layout/finished_game_partner_item.xml
@@ -9,63 +9,113 @@
     app:cardBackgroundColor="@color/white"
     android:layout_margin="8dp">
 
-    <LinearLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_marginBottom="16dp"
-        android:paddingStart="8dp"
-        android:paddingEnd="8dp"
-        android:paddingTop="16dp"
-        android:paddingBottom="16dp">
+        android:padding="8dp">
 
-        <LinearLayout
-            android:layout_width="match_parent"
+        <ImageView
+            android:id="@+id/winnerTextViewImageView1"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:layout_margin="8dp"
+            android:src="@drawable/ic_group"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:contentDescription="@string/todo"/>
+
+
+        <TextView
+            android:id="@+id/team1Name"
+            style="@style/NameTextViewStyle"
+            app:layout_constraintStart_toEndOf="@+id/winnerTextViewImageView1"
+            app:layout_constraintTop_toTopOf="parent" />
+
+
+        <TextView
+            android:id="@+id/team1TotalScore"
+            style="@style/ScoreTextViewStyle"
+            app:layout_constraintStart_toEndOf="@+id/winnerTextViewImageView1"
+            app:layout_constraintTop_toBottomOf="@+id/team1Name" />
+
+        <View
+            android:id="@+id/vertical_seperator"
+            android:layout_width="1dp"
+            android:layout_height="56dp"
+            android:layout_margin="16dp"
+            android:background="@color/seperator_color"
+            app:layout_constraintBottom_toTopOf="@+id/horizontal_seperator"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <ImageView
+            android:id="@+id/winnerTextViewImageView2"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:layout_margin="8dp"
+            android:layout_marginStart="16dp"
+            android:src="@drawable/ic_group"
+            app:layout_constraintStart_toEndOf="@+id/vertical_seperator"
+            app:layout_constraintTop_toTopOf="parent"
+            android:contentDescription="@string/todo"/>
+
+
+        <TextView
+            android:id="@+id/team2Name"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:layout_margin="8dp"
+            android:text="@string/player"
+            android:textColor="@color/score_hint_text_color"
+            android:textSize="16sp"
+            app:layout_constraintStart_toEndOf="@+id/winnerTextViewImageView2"
+            app:layout_constraintTop_toTopOf="parent" />
 
-            <com.google.android.material.textfield.TextInputLayout
-                style="@style/NameTextInputLayoutStyle"
-                android:id="@+id/team1Name"
-                app:hintTextAppearance="@style/HintTextAppearance"
-                app:boxStrokeWidth="0dp">
+        <TextView
+            android:id="@+id/team2TotalScore"
+            style="@style/ScoreTextViewStyle"
+            app:layout_constraintStart_toEndOf="@+id/winnerTextViewImageView2"
+            app:layout_constraintTop_toBottomOf="@+id/team2Name" />
 
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/team1TotalScore"
-                    style="@style/ScoreTextInputEditTextStyle" />
-            </com.google.android.material.textfield.TextInputLayout>
 
-            <include layout="@layout/vertical_seperator" />
-
-            <com.google.android.material.textfield.TextInputLayout
-                style="@style/NameTextInputLayoutStyle"
-                android:id="@+id/team2Name"
-                app:hintTextAppearance="@style/HintTextAppearance"
-                app:boxStrokeWidth="0dp">
-
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/team2TotalScore"
-                    style="@style/ScoreTextInputEditTextStyle" />
-            </com.google.android.material.textfield.TextInputLayout>
-
-        </LinearLayout>
-
-        <include layout="@layout/horizontal_seperator" />
-
-        <LinearLayout
-            android:orientation="vertical"
+        <View
+            android:id="@+id/horizontal_seperator"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="1dp"
+            android:layout_gravity="center"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginTop="24dp"
+            android:layout_marginBottom="16dp"
+            android:background="@color/seperator_color"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/winnerTextViewImageView1" />
 
-            <TextView
-                android:id="@+id/gameInfo"
-                style="@style/InfoTextViewStyle"/>
+        <TextView
+            android:id="@+id/gameInfo"
+            style="@style/InfoTextViewStyle"
+            android:layout_marginTop="16dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
 
-            <TextView
-                android:id="@+id/gameDate"
-                style="@style/DateTextViewStyle"/>
-        </LinearLayout>
-    </LinearLayout>
+            android:drawablePadding="8dp"
+            android:gravity="center_vertical"
+            app:drawableLeftCompat="@drawable/ic_trophy"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/horizontal_seperator" />
+
+        <TextView
+            android:id="@+id/gameDate"
+            style="@style/DateTextViewStyle"
+            android:layout_margin="8dp"
+            android:drawablePadding="8dp"
+            android:gravity="center_vertical"
+            app:drawableLeftCompat="@drawable/ic_calendar"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/gameInfo" />
 
 
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
