--- a/app/src/main/res/layout/finished_game_single_item.xml
+++ b/app/src/main/res/layout/finished_game_single_item.xml
@@ -5,98 +5,177 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     app:cardElevation="10dp"
-    app:cardCornerRadius="16dp"
+    app:cardCornerRadius="20dp"
     app:cardBackgroundColor="@color/white"
     android:layout_margin="8dp">
 
-    <LinearLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_marginBottom="16dp"
-        android:paddingStart="8dp"
-        android:paddingEnd="8dp"
-        android:paddingTop="16dp"
-        android:paddingBottom="16dp">
+        android:padding="8dp">
 
-        <LinearLayout
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:layout_margin="8dp"
+            android:src="@drawable/ic_player"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:contentDescription="@string/todo" />
+
+        <TextView
+            android:id="@+id/player1Name"
+            style="@style/NameTextViewStyle"
+            app:layout_constraintStart_toEndOf="@+id/imageView"
+            app:layout_constraintTop_toTopOf="parent" />
+
+
+        <TextView
+            android:id="@+id/player1TotalScore"
+            style="@style/ScoreTextViewStyle"
+            app:layout_constraintStart_toEndOf="@+id/imageView"
+            app:layout_constraintTop_toBottomOf="@+id/player1Name" />
+
+        <View
+            android:id="@+id/vertical_seperator"
+            android:layout_width="1dp"
+            android:layout_height="56dp"
+            android:layout_margin="16dp"
+            android:background="@color/seperator_color"
+            app:layout_constraintBottom_toTopOf="@+id/horizontal_seperator"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <ImageView
+            android:id="@+id/imageView2"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:layout_margin="8dp"
+            android:layout_marginStart="16dp"
+            android:src="@drawable/ic_player"
+            app:layout_constraintStart_toEndOf="@+id/vertical_seperator"
+            app:layout_constraintTop_toTopOf="parent"
+            android:contentDescription="@string/todo"/>
+
+        <TextView
+            android:id="@+id/player2Name"
+            style="@style/NameTextViewStyle"
+            app:layout_constraintStart_toEndOf="@+id/imageView2"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/player2TotalScore"
+            style="@style/ScoreTextViewStyle"
+            app:layout_constraintStart_toEndOf="@+id/imageView2"
+            app:layout_constraintTop_toBottomOf="@+id/player2Name" />
+
+
+        <View
+            android:id="@+id/horizontal_seperator"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-            <com.google.android.material.textfield.TextInputLayout
-                style="@style/NameTextInputLayoutStyle"
-                android:id="@+id/player1Name"
-                app:hintTextAppearance="@style/HintTextAppearance"
-                app:boxStrokeWidth="0dp">
+            android:layout_height="1dp"
+            android:layout_gravity="center"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginBottom="16dp"
 
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/player1TotalScore"
-                    style="@style/ScoreTextInputEditTextStyle" />
-            </com.google.android.material.textfield.TextInputLayout>
+            android:background="@color/seperator_color"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
-            <include layout="@layout/vertical_seperator" />
 
-            <com.google.android.material.textfield.TextInputLayout
-                style="@style/NameTextInputLayoutStyle"
-                android:id="@+id/player2Name"
-                app:hintTextAppearance="@style/HintTextAppearance"
-                app:boxStrokeWidth="0dp">
+        <ImageView
+            android:id="@+id/imageView3"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:layout_margin="8dp"
+            android:src="@drawable/ic_player"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/horizontal_seperator"
+            android:contentDescription="@string/todo"/>
 
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/player2TotalScore"
-                    style="@style/ScoreTextInputEditTextStyle" />
-            </com.google.android.material.textfield.TextInputLayout>
+        <TextView
+            android:id="@+id/player3Name"
+            style="@style/NameTextViewStyle"
+            app:layout_constraintStart_toEndOf="@+id/imageView3"
+            app:layout_constraintTop_toBottomOf="@+id/horizontal_seperator" />
 
-        </LinearLayout>
 
-        <include layout="@layout/horizontal_seperator" />
+        <TextView
+            android:id="@+id/player3TotalScore"
+            style="@style/ScoreTextViewStyle"
+            app:layout_constraintStart_toEndOf="@+id/imageView3"
+            app:layout_constraintTop_toBottomOf="@+id/player3Name" />
 
-        <LinearLayout
+
+        <View
+            android:id="@+id/vertical_seperator2"
+            android:layout_width="1dp"
+            android:layout_height="56dp"
+            android:layout_margin="16dp"
+            android:background="@color/seperator_color"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/horizontal_seperator" />
+
+        <ImageView
+            android:id="@+id/imageView4"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:layout_margin="8dp"
+            android:src="@drawable/ic_player"
+            app:layout_constraintStart_toEndOf="@+id/vertical_seperator2"
+            app:layout_constraintTop_toBottomOf="@+id/horizontal_seperator"
+            android:contentDescription="@string/todo"/>
+
+        <TextView
+            android:id="@+id/player4Name"
+            style="@style/NameTextViewStyle"
+            app:layout_constraintStart_toEndOf="@+id/imageView4"
+            app:layout_constraintTop_toBottomOf="@+id/horizontal_seperator" />
+
+        <TextView
+            android:id="@+id/player4TotalScore"
+            style="@style/ScoreTextViewStyle"
+            app:layout_constraintStart_toEndOf="@+id/imageView4"
+            app:layout_constraintTop_toBottomOf="@+id/player4Name" />
+
+        <View
+            android:id="@+id/horizontal_seperator2"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginTop="16dp">
+            android:layout_height="1dp"
+            android:layout_gravity="center"
+            android:layout_marginTop="16dp"
 
-            <com.google.android.material.textfield.TextInputLayout
-                style="@style/NameTextInputLayoutStyle"
-                android:id="@+id/player3Name"
-                app:hintTextAppearance="@style/HintTextAppearance"
-                app:boxStrokeWidth="0dp">
-
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/player3TotalScore"
-                    style="@style/ScoreTextInputEditTextStyle" />
-            </com.google.android.material.textfield.TextInputLayout>
-
-            <include layout="@layout/vertical_seperator" />
-
-            <com.google.android.material.textfield.TextInputLayout
-                style="@style/NameTextInputLayoutStyle"
-                android:id="@+id/player4Name"
-                app:hintTextAppearance="@style/HintTextAppearance"
-                app:boxStrokeWidth="0dp">
-
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/player4TotalScore"
-                    style="@style/ScoreTextInputEditTextStyle" />
-            </com.google.android.material.textfield.TextInputLayout>
-        </LinearLayout>
+            android:background="@color/seperator_color"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/vertical_seperator2" />
 
 
-        <include layout="@layout/horizontal_seperator" />
+        <TextView
+            android:id="@+id/gameInfo"
+            style="@style/InfoTextViewStyle"
+            android:layout_marginStart="8dp"
+            android:drawablePadding="8dp"
+            android:gravity="center_vertical"
+            app:drawableLeftCompat="@drawable/ic_trophy"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/horizontal_seperator2" />
 
-        <LinearLayout
-            android:orientation="vertical"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+        <TextView
+            android:id="@+id/gameDate"
+            style="@style/DateTextViewStyle"
+            android:layout_margin="8dp"
+            android:drawablePadding="8dp"
+            android:gravity="center_vertical"
+            app:drawableLeftCompat="@drawable/ic_calendar"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/gameInfo" />
 
-            <TextView
-                android:id="@+id/gameInfo"
-                style="@style/InfoTextViewStyle"/>
 
-            <TextView
-                android:id="@+id/gameDate"
-                style="@style/DateTextViewStyle"/>
-        </LinearLayout>
-    </LinearLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
