--- a/app/src/main/res/layout/single_game_round_item.xml
+++ b/app/src/main/res/layout/single_game_round_item.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
-    android:layout_marginTop="16dp">
+    android:id="@+id/singleGameItemBackground">
 
         <com.google.android.material.textfield.TextInputLayout
             style="@style/NameTextInputLayoutStyle"
