--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -8,6 +8,7 @@
     <color name="white">#FFFFFF</color>
     <color name="black">#000000</color>
     <color name="green">#95FF00</color>
+
     <color name="score_text_color">#45494A</color>
     <color name="score_hint_text_color">#FF6200EE</color>
     <color name="date_text_color">#FF6200EE</color>
@@ -23,8 +24,9 @@
     <color name="button_text_color">#FFFFFF</color>
     <color name="icon_color">#45494A</color>
     <color name="searchview_text_color">#45494A</color>
-
     <color name="min_score_color">#8022D11B</color>
     <color name="max_score_color">#80FF0000</color>
+    <color name="item_background_color1">#FFFFFF</color>
+    <color name="item_background_color2">#F3F3F3</color>
 
 </resources>
