--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,8 +12,8 @@
     <color name="score_text_color">#45494A</color>
     <color name="score_hint_text_color">#FF6200EE</color>
     <color name="date_text_color">#FF6200EE</color>
-    <color name="info_text_color">#FF3700B3</color>
-    <color name="name_text_color">#45494A</color>
+    <color name="info_text_color">#FF6200EE</color>
+    <color name="name_text_color">#FF6200EE</color>
     <color name="seperator_color">#45494A</color>
     <color name="fab_text_color">#45494A</color>
     <color name="fab_background_color">#FF6200EE</color>
@@ -22,9 +22,12 @@
     <color name="stroke_color">#45494A</color>
     <color name="main_background_color">#FFFFFF</color>
     <color name="button_text_color">#FFFFFF</color>
-    <color name="icon_color">#45494A</color>
+    <color name="icon_color">#777E80</color>
     <color name="searchview_text_color">#45494A</color>
     <color name="min_score_color">#8022D11B</color>
     <color name="max_score_color">#80FF0000</color>
+    <color name="item_background_color1">#FFFFFF</color>
+    <color name="item_background_color2">#F3F3F3</color>
+    <color name="winner">#FFF176</color>
 
 </resources>
